# firominer

./: CMakeLists.txt  README.md
firominer/: CMakeLists.txt  main.cpp
libapicore/: ApiServer.cpp  CMakeLists.txt
libcrypto/: ethash.hpp
libethash-cuda/: CMakeLists.txt
libpoolprotocols/: CMakeLists.txt
libpoolprotocols/stratum/: EthStratumClient.cpp
sccminer/: CMakeLists.txt  main.cpp  sccminer.rc
